# PROJECT(projectname [CXX] [C] [Java])
PROJECT (HELLO) 

# 设定PROJECT后,　_BINARY_DIR　_SOURCE_DIR 内置变量
# 不建议使用 <projectname>_SOURCE_DIR
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
#　建议使用:
MESSAGE(STATUS "RECOMMEND: This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "RECOMMEND: This is SOURCE dir " ${PROJECT_SOURCE_DIR})

#  SET(VAR [VALUE] [CACHE TYPE DOCSTRING [FORCE]])
#  多个文件也可以定义为: SET(SRC_LIST main.c t1.c t2.c)
SET(SRC_LIST main.c)

ADD_EXECUTABLE(hello ${SRC_LIST})